--- a/express/package.json
+++ b/express/package.json
@@ -4,8 +4,10 @@
 	"main": "index.js",
 	"license": "MIT",
 	"dependencies": {
+		"art-template": "^4.13.2",
 		"body-parser": "^1.19.0",
-		"express": "^4.17.1"
+		"express": "^4.17.1",
+		"express-art-template": "^1.0.1"
 	},
 	"scripts": {
 		"start": "nodemon server.js"
